--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,10 @@
     "@types/pg": "^8.11.11",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dompurify": "^3.2.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "jsdom": "^26.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.17",
+    "@types/jsdom": "^21.1.7",
     "@types/jsonwebtoken": "^9.0.9",
     "ts-node": "^10.9.2"
   }
