--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "jsdom": "^26.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
+    "passport": "^0.7.0",
+    "passport-http-header-strategy": "^1.1.0",
     "pg": "^8.14.1",
     "prisma": "^6.5.0",
     "typescript": "^5.8.2"
@@ -32,6 +34,7 @@
     "@types/jsdom": "^21.1.7",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.0",
+    "@types/passport": "^1.0.17",
     "ts-node": "^10.9.2"
   }
 }
